--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
@@ -23,13 +23,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_MAILER=mailgun
+MAIL_HOST=smtp.mailgun.org
+MAILGUN_DOMAIN=sandbox391651b408624fbe8d2aadb232de42d8.mailgun.org
+MAILGUN_SECRET=key-50fbd96240ee2600e9af233a0e4a41ab
+MAIL_PORT=587
+MAIL_USERNAME=postmaster@sandbox391651b408624fbe8d2aadb232de42d8.mailgun.org
+MAIL_PASSWORD=e53345deef4c40a06f1275ca2e340cee-9b1bf5d3-ca6c52f6
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=support@herculesoftwares.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
