--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "biscolab/laravel-recaptcha": "^4.4",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.2.15",
         "laravel/framework": "^8.0",
-        "laravel/nova": "~3.0",
         "laravel/jetstream": "^1.4",
+        "laravel/nova": "~3.0",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
