--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.2.15",
+        "laravel-lang/lang": "~7.0",
         "laravel/framework": "^8.0",
         "laravel/jetstream": "^1.4",
         "laravel/nova": "~3.0",
@@ -23,6 +24,7 @@
         "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
+        "andrey-helldar/laravel-lang-publisher": "^6.1",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
