--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/jetstream": "^1.4",
         "laravel/nova": "~3.0",
         "laravel/sanctum": "^2.6",
+        "laravel/telescope": "^4.4",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
         "tightenco/ziggy": "^0.9.4"
