--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "bernhardh/nova-translation-editor": "^1.2",
         "biscolab/laravel-recaptcha": "^4.4",
+        "digitalcloud/multilingual-nova": "^2.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -22,6 +24,7 @@
         "laravel/telescope": "^4.4",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "spatie/laravel-translation-loader": "^2.7",
         "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
