--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=167.71.129.240
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=hercules
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Root@1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
