--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@johmun/vue-tags-input": "^2.1.0",
         "alpinejs": "^2.7.3"
     }
 }
