--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.4.2",
+        "@heroicons/vue": "^1.0.5",
         "@johmun/vue-tags-input": "^2.1.0",
         "alpinejs": "^2.7.3"
     }
